; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/x86/kernel/extr_amd_iommu.c_iommu_queue_command.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/x86/kernel/extr_amd_iommu.c_iommu_queue_command.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.amd_iommu = type { i32, i32 }
%struct.iommu_cmd = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.amd_iommu*, %struct.iommu_cmd*)* @iommu_queue_command to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @iommu_queue_command(%struct.amd_iommu* %0, %struct.iommu_cmd* %1) #0 {
  %3 = alloca %struct.amd_iommu*, align 8
  %4 = alloca %struct.iommu_cmd*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32, align 4
  store %struct.amd_iommu* %0, %struct.amd_iommu** %3, align 8
  store %struct.iommu_cmd* %1, %struct.iommu_cmd** %4, align 8
  %7 = load %struct.amd_iommu*, %struct.amd_iommu** %3, align 8
  %8 = getelementptr inbounds %struct.amd_iommu, %struct.amd_iommu* %7, i32 0, i32 1
  %9 = load i64, i64* %5, align 8
  %10 = call i32 @spin_lock_irqsave(i32* %8, i64 %9)
  %11 = load %struct.amd_iommu*, %struct.amd_iommu** %3, align 8
  %12 = load %struct.iommu_cmd*, %struct.iommu_cmd** %4, align 8
  %13 = call i32 @__iommu_queue_command(%struct.amd_iommu* %11, %struct.iommu_cmd* %12)
  store i32 %13, i32* %6, align 4
  %14 = load i32, i32* %6, align 4
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %19, label %16

16:                                               ; preds = %2
  %17 = load %struct.amd_iommu*, %struct.amd_iommu** %3, align 8
  %18 = getelementptr inbounds %struct.amd_iommu, %struct.amd_iommu* %17, i32 0, i32 0
  store i32 1, i32* %18, align 4
  br label %19

19:                                               ; preds = %16, %2
  %20 = load %struct.amd_iommu*, %struct.amd_iommu** %3, align 8
  %21 = getelementptr inbounds %struct.amd_iommu, %struct.amd_iommu* %20, i32 0, i32 1
  %22 = load i64, i64* %5, align 8
  %23 = call i32 @spin_unlock_irqrestore(i32* %21, i64 %22)
  %24 = load i32, i32* %6, align 4
  ret i32 %24
}

declare dso_local i32 @spin_lock_irqsave(i32*, i64) #1

declare dso_local i32 @__iommu_queue_command(%struct.amd_iommu*, %struct.iommu_cmd*) #1

declare dso_local i32 @spin_unlock_irqrestore(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
